--- a/gb/21/4/12/n12874782.md
+++ b/gb/21/4/12/n12874782.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tnuyfx3798/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tnuyfx3798/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tnuyfx3798/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tnuyfx3798/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tnuyfx3798/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tnuyfx3798/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tnuyfx3798/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tnuyfx3798/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tnuyfx3798/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tnuyfx3798/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tnuyfx3798/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tnuyfx3798/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tnuyfx3798/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tnuyfx3798/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【名家专栏】Z世代静默的言论自由危机</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12874808-GettyImages-1205529954-700x420-600x400.jpg" />
 <h6>2020年3月6日，西雅图，华盛顿大学的学生在校园里进行新冠疫情蔓延后最后一天的面授课程。(Karen Ducey/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年04月12日讯】（英文大纪元专栏作家Rikki Schlott撰文／信宇编译）众所周知，针对<ahref="https://github.com/tnuyfx3798/djy/blob/master/gb/tag/%E8%A8%80%E8%AE%BA%E8%87%AA%E7%94%B1.md#1">言论自由</a>的大肆打压正在进行。越来越多的知名人士由于逾越了所谓政治正确的界限而遭受舆论残酷谴责，取消文化甚嚣尘上，所到之处，风声鹤唳。</p>
+	<p>【大纪元2021年04月12日讯】（英文大纪元专栏作家Rikki Schlott撰文／信宇编译）众所周知，针对<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E8%A8%80%E8%AE%BA%E8%87%AA%E7%94%B1.md#1">言论自由</a>的大肆打压正在进行。越来越多的知名人士由于逾越了所谓政治正确的界限而遭受舆论残酷谴责，取消文化甚嚣尘上，所到之处，风声鹤唳。</p>
 <p>与此同时，审查制度在大学校园里横行霸道，安全高墙建立起来，演讲内容稍有“逾矩”即被亮起红灯叫停。</p>
 <p>虽然这些校园审查案例在全国范围内比比皆是，广受关注，然而这种反自由主义的文化转向对年轻一代影响深远，而这个影响很大程度上都被外界置若罔闻。</p>
-<p>我们这一代人被称为“Z世代”（1995～2010年间出生的一代人，又称网络世代），正在遭受一场不露声色、遁迹潜形的自由表达<ahref="https://github.com/tnuyfx3798/djy/blob/master/gb/tag/%E5%8D%B1%E6%9C%BA.md#1">危机</a>。异统学会（Heterodox Academy，译注：这是一个由教授组成的非营利性组织，旨在拓宽大学校园的观点多样性）最近的一项调查结果正反映了这一点。该调查发现，62%的大学生认为目前的校园气氛阻止人们表达信仰，而2019年该比例为55%。</p>
-<p>不同于那些头条新闻故事，这是一场悄无声息的<ahref="https://github.com/tnuyfx3798/djy/blob/master/gb/tag/%E8%A8%80%E8%AE%BA%E8%87%AA%E7%94%B1.md#1">言论自由</a><ahref="https://github.com/tnuyfx3798/djy/blob/master/gb/tag/%E5%8D%B1%E6%9C%BA.md#1">危机</a>。年轻人噤若寒蝉，并不是因为发表了与众不同的信仰观点——他们根本就不敢越雷池半步。</p>
+<p>我们这一代人被称为“Z世代”（1995～2010年间出生的一代人，又称网络世代），正在遭受一场不露声色、遁迹潜形的自由表达<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%8D%B1%E6%9C%BA.md#1">危机</a>。异统学会（Heterodox Academy，译注：这是一个由教授组成的非营利性组织，旨在拓宽大学校园的观点多样性）最近的一项调查结果正反映了这一点。该调查发现，62%的大学生认为目前的校园气氛阻止人们表达信仰，而2019年该比例为55%。</p>
+<p>不同于那些头条新闻故事，这是一场悄无声息的<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E8%A8%80%E8%AE%BA%E8%87%AA%E7%94%B1.md#1">言论自由</a><ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%8D%B1%E6%9C%BA.md#1">危机</a>。年轻人噤若寒蝉，并不是因为发表了与众不同的信仰观点——他们根本就不敢越雷池半步。</p>
 <p>在很大程度上，大学校园里的偏狭文化是上述问题的罪魁祸首。学生和教授们所拥护的政治正统，已经等同于一个意识形态的回音室和传声筒，毫无个性可言。安全空间（Safe space<strong>）</strong>和触发警报（trigger warning，注：指的是警告大学校园内的书籍、课堂、演讲等可能会有冒犯到他人、特别是少数族裔人群、性少数人群等的内容，并导致受冒犯人群做出过激反应）等措施把广大学生置于温室里，听不到任何不同思想，更令越来越多的人固执地认为，发表观点就是宣扬暴力。</p>
 <p>由于学校教授和行政人员促成了这种安全主义文化，他们打造了一种氛围，“逾规越矩”者将遭遇取消和严格审查。在这种高压下，大多数学生不可避免地主动进行自我审查。他们学会了向现实低头，为了学业学分，为了体面生活，甚至仅仅为了自我生存。</p>
 <p>反自由主义在校园里不断兴起，正侵蚀着Z世代的教育公正。压制异端异见明显违背了大学校园的基本宗旨：为最聪明的头脑提供施展平台，在追求真理的征程中进行观点辩论和思想交流。发现和创新需要开放无羁的话语权和冲破藩篱的自由度，然而学术界却放弃了自己的当然使命，转而支持正统和审查制度。</p>
@@ -27,47 +27,47 @@
 <p><em>作者简介：</em></p>
 <p><em>瑞琪·施洛特（Rikki Schlott），作家兼学生，居住在纽约市。她是一名年轻的言论自由活动家，其作品从Z世代的独特视角记录了反自由主义的崛起。她还为广播节目《梅根·凯利秀》（Megyn Kelly Show）工作，作品发表在《每日电讯报》（The Daily Wire）和《保守派评论》（The Conservative Review）等报刊上。</em></p>
 <p><em>本文仅代表作者观点，并不一定反映《大纪元时报》立场。</em></p>
-<p>责任编辑：高静#</p>
+<p>责任编辑：高静#◇</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/20/6/22/n12204163.md#1">【名家专栏】民主的价值：尊重异议者的言论自由</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/1/17/n12693559.md#1">【名家专栏】捍卫言论自由需要勇气</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/1/21/n12702957.md#1">【名家专栏】网络审查剥夺了言论自由权利</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/2/22/n12767813.md#1">【名家专栏】言论自由与身份认同政治的较量</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/6/22/n12204163.md#1">【名家专栏】民主的价值：尊重异议者的言论自由</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/1/17/n12693559.md#1">【名家专栏】捍卫言论自由需要勇气</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/1/21/n12702957.md#1">【名家专栏】网络审查剥夺了言论自由权利</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/2/22/n12767813.md#1">【名家专栏】言论自由与身份认同政治的较量</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/6/n10120117.md#1" target="_blank">林辉：文革“群丑图”从热传到被封杀的背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/27/n7938314.md#1" target="_blank">摆脱10多年严重湿疹的折磨</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/3/n11766427.md#1" target="_blank">张林：共军在朝鲜战争中丧生两百万（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/13/n11256153.md#1" target="_blank">留守女孩的命运转变</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/8/n12867405.md#1">【未解之谜】远古科技：20亿年前核反应堆</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/6/n12861114.md#1">自称死过三次 女网红：人死后时间变得很慢</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/11/n12872178.md#1">英国羊群排成神秘的“麦田圈” 令人费解</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/5/n12858316.md#1">原本命中无子，他做了什么事？连生11个儿子</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/6/n12862138.md#1">【未解之谜】“妈妈我记得你” 神奇的胎内记忆</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/10/n12871731.md#1">【小宇宙传说】鲜为人知的“移植记忆”故事</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/11/n12871927.md#1">【首播】专访程晓农：经济全球化告别中国版（6）</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/9/n12870083.md#1">【新闻大家谈】中国CDC泄密 美台交往松绑</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/9/n12870408.md#1">【远见快评】美议员推重磅法案 中共红线全踩了</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/10/n12871666.md#1">中共公安部强推手机App 全民遭监视监听</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/10/n12871563.md#1">持续抱怨政府 朝鲜高官被金正恩处决</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/9/n12870066.md#1">被刘若英直问从来没娱乐 刘德华发飙原因曝光</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/11/n12872829.md#1">与梁朝伟当年同试镜 周星驰落选原因笑翻网友</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/9/n12870258.md#1">吐槽邓超旅游体力差 孙俪背着丈夫行走秀恩爱</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/11/n12873058.md#1">好莱坞巨星史泰龙 加入川普私人俱乐部</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/11/n12872163.md#1">周华健开唱合体齐豫 带领歌迷重温武侠经典</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/9/n12870136.md#1">腰围3周减11公分！早上喝1杯瘦小腹 还让视力变好</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/11/n12872178.md#1">英国羊群排成神秘的“麦田圈” 令人费解</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/10/n12870791.md#1">谷歌地图乱带路 害印尼男子差点娶错老婆</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/10/n12871005.md#1">奇特兔子不会跑跳 却会倒立行走</a></li>
-<li><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/10/n12871254.md#1">【重播】新冠感染传染期是多少天？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tnuyfx3798/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tnuyfx3798/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/12/n12874782.htm">【名家专栏】Z世代静默的言论自由危机</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/12/n12874782.htm">【名家专栏】Z世代静默的言论自由危机</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tnuyfx3798/djy/blob/master/gb/21/4/12/n12874782.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tnuyfx3798/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tnuyfx3798/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tnuyfx3798/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnuyfx3798/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/21/4/12/n12874782.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
